syntax = "proto2";

package org.elasticsoftware.elasticactors.serialization.protobuf;


option optimize_for = SPEED;

// WARNING:
//    you must not change the tag numbers of any existing fields.
//    you must not add or delete any required fields.
//    you may delete optional or repeated fields.
//    you may add new optional or repeated fields but you must use fresh tag numbers (i.e. tag numbers that were never
//        used in this protocol buffer, not even by deleted fields).

message ScheduledMessage {
    optional bytes id = 1;
    optional uint64 fireTime = 2;
    optional string receiver = 3;
    optional string sender = 4;
    optional string messageClass = 5;
    optional bytes message = 6;
}

message ActorSystemEventListener {
    optional string actorId = 1;
    optional string messageClass = 2;
    optional bytes message = 3;
}

message PersistentActor {
    optional string actorRef = 1;
    optional string actorClass = 2;
    optional string actorSystemVersion = 3;
    optional bytes state = 4;
    optional string shardKey = 5;
    repeated Subscriber subscribers = 6;
    repeated Subscription subscriptions = 7;
}

message Subscriber {
    optional string subscriberRef = 1;
    optional string messageName = 2;
    optional uint64 leases = 3;
}

message Subscription {
    optional string publisherRef = 1;
    optional string messageName = 2;
    optional bool cancelled = 3;
}

enum ActorType {
   PERSISTENT = 0;
   TEMP = 1;
   SERVICE = 2;
}

message CreateActorMessage {
    optional string actorId = 1;
    optional bytes initialState = 2;
    optional string actorClass = 3;
    optional string actorSystem = 4;
    optional ActorType type = 5;
    optional string affinityKey = 6;
}

message DestroyActorMessage {
    optional string actorRef = 1;
}

message ActivateActorMessage {
    optional string actorSystem = 1;
    optional string actorId = 2;
    optional ActorType type = 3;
}

message WireMessage {
    optional string queueName = 1;
    optional bytes internalMessage = 2;
}

message CancelScheduledMessageMessage {
    optional bytes messageId = 1;
    optional uint64 fireTime = 2;
}

message ActorNodeMessage {
    optional string receiver = 1;
    optional string nodeId = 2;
    optional string payloadClass = 3;
    optional bytes payload = 4;
    optional bool undeliverable = 5;
}

message PersistActorMessage {
    optional string actorRef = 1;
}